# codestory

./: .gitignore  ReadMe.md  TODO.md  changelog_episodes.py  cinematic_markdown.py  codeQT.py  codestory.py  config.json  git_commit_haiku.py  llm.env.example  pyproject.toml  ytpipeline.py
.clinerules/: Docs.md
Assets/audio/: README.md
Assets/haikuJSON/: haiku_001_main_f4096af.json  haiku_002_main_c70d0e6.json  haiku_003_main_f89ae07.json  haiku_004_main_8d5b87f.json  haiku_005_main_1c91115.json  haiku_006_main_6a8a858.json  haiku_main_1c91115.json  haiku_main_5baafe0.json  haiku_main_6a8a858.json  haiku_main_8d5b87f.json  haiku_main_b719883.json  haiku_main_c70d0e6.json  haiku_main_f4096af.json  haiku_main_f89ae07.json
Assets/haikus/: haiku_001_main_1d38.json  haiku_002_main_bc63.json  haiku_003_main_7145.json  haiku_004_main_e819.json  haiku_005_main_7713.json  haiku_006_main_06d7.json  haiku_007_main_da36.json  haiku_008_main_e004.json  haiku_009_main_5563.json  haiku_010_main_a2ee.json  haiku_011_main_0535.json  haiku_012_main_831b.json  haiku_013_main_fb39.json  haiku_014_main_e848.json  haiku_015_main_a8cb.json  haiku_016_main_7fa4.json  haiku_017_main_bfdd.json  haiku_018_main_79ce.json  haiku_019_main_d278.json  haiku_020_main_adf8.json  haiku_021_main_2a25.json  haiku_022_main_6cb5.json  haiku_023_main_f911.json  haiku_024_main_b4dd.json  haiku_025_main_5d0e.json  haiku_026_main_1e76.json  (+9 more)
Director/: CommitSignature.md  EpisodeDirector.md  Ethos.md  HaikuDirector.md  Now.md  ReleaseCutDirector.md  RepoStory.md
core/: __init__.py  types.py
(+46 files in other folders)
