[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codestory"
version = "0.1.0"
description = "Turn your git history into a cinematic noir crime thriller"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Omkar H", email = "omkar@example.com"}
]
keywords = ["git", "storytelling", "llm", "noir", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
codestory = "codestory.__main__:main"

[project.urls]
Homepage = "https://github.com/omkarh25/codestory"
Repository = "https://github.com/omkarh25/codestory"
Issues = "https://github.com/omkarh25/codestory/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
